--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "FTXUI"]
+[submodule "CplusplusServer/external/FTXUI"]
 	path = CplusplusServer/external/FTXUI
 	url = https://github.com/ArthurSonzogni/FTXUI
